--- a/HippoSupermecado/app/src/main/res/layout/fragment_termo_de_servico.xml
+++ b/HippoSupermecado/app/src/main/res/layout/fragment_termo_de_servico.xml
@@ -21,8 +21,8 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="321dp"
+        android:layout_height="125dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="48dp"
@@ -33,21 +33,21 @@
         tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi eu consequat nisl. Fusce suscipit aliquam massa. Fusce sit amet nunc ut nisl dignissim scelerisque. Suspendisse aliquet tortor sed dignissim sollicitudin. Sed convallis lorem vel egestas maximus. Phasellus elementum varius ipsum et lacinia. Nulla in pellentesque sapien." />
 
     <RadioButton
-        android:id="@+id/radioButton"
+        android:id="@+id/radioTermo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="40dp"
         android:text="Eu aceito os termos"
         app:layout_constraintTop_toBottomOf="@+id/textView"
-        tools:layout_editor_absoluteX="138dp" />
+        tools:layout_editor_absoluteX="114dp" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btnTermo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="68dp"
         android:text="Avançar"
-        app:layout_constraintTop_toBottomOf="@+id/radioButton"
+        app:layout_constraintTop_toBottomOf="@+id/radioTermo"
         tools:layout_editor_absoluteX="148dp" />
 
 </android.support.constraint.ConstraintLayout>
