--- a/HippoSupermecado/app/src/main/res/layout/fragment_endereco.xml
+++ b/HippoSupermecado/app/src/main/res/layout/fragment_endereco.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.hipposupermecado.endereco">
+    tools:context="com.hipposupermecado.Endereco">
 
     <!-- TODO: Update blank fragment layout -->
 
