Telas Cadastro Usuário

--- a/HippoSupermecado/app/src/main/res/layout/activity_testes_fragmentos.xml
+++ b/HippoSupermecado/app/src/main/res/layout/activity_testes_fragmentos.xml
@@ -9,7 +9,7 @@
     <FrameLayout
         android:id="@+id/frameLayout"
         android:layout_width="350dp"
-        android:layout_height="413dp"
+        android:layout_height="370dp"
         android:layout_marginBottom="4dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
@@ -27,6 +27,16 @@
         android:layout_marginTop="8dp"
         android:text="Cadastro Usuario"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/btnLogin"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="Login"
+        app:layout_constraintStart_toEndOf="@+id/btnCadastroUsuario"
         app:layout_constraintTop_toTopOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
