--- a/HippoSupermecado/app/src/main/res/layout/fragment_termo_de_servico.xml
+++ b/HippoSupermecado/app/src/main/res/layout/fragment_termo_de_servico.xml
@@ -14,13 +14,13 @@
         android:layout_marginBottom="8dp"
         android:layout_marginTop="8dp"
         android:text="TextView"
-        app:layout_constraintBottom_toTopOf="@+id/textView"
+        app:layout_constraintBottom_toTopOf="@+id/tvDescricao"
         app:layout_constraintTop_toTopOf="parent"
         tools:layout_editor_absoluteX="133dp"
         tools:text="Termos De Serviço" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/tvDescricao"
         android:layout_width="321dp"
         android:layout_height="125dp"
         android:layout_marginEnd="8dp"
@@ -38,7 +38,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
         android:text="Eu aceito os termos"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintTop_toBottomOf="@+id/tvDescricao"
         tools:layout_editor_absoluteX="114dp" />
 
     <Button
