--- a/HippoSupermecado/app/src/main/res/layout/activity_testes_fragmentos.xml
+++ b/HippoSupermecado/app/src/main/res/layout/activity_testes_fragmentos.xml
@@ -39,4 +39,14 @@
         app:layout_constraintStart_toEndOf="@+id/btnCadastroUsuario"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <Button
+        android:id="@+id/btnDetalhes"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="Detalhes"
+        app:layout_constraintStart_toEndOf="@+id/btnLogin"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </android.support.constraint.ConstraintLayout>
