--- a/HippoSupermecado/app/src/main/res/layout/item_categoria.xml
+++ b/HippoSupermecado/app/src/main/res/layout/item_categoria.xml
@@ -14,10 +14,11 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:background="@color/colorAccent"
-        android:text="TextView"
+        android:backgroundTint="@color/colorPrimary"
+        android:paddingBottom="5dp"
         android:paddingLeft="20dp"
         android:paddingTop="10dp"
-        android:paddingBottom="5dp"
+        android:text="TextView"
         android:textColor="@android:color/background_light"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
