--- a/HippoSupermecado/app/src/main/res/layout/fragment_destaque.xml
+++ b/HippoSupermecado/app/src/main/res/layout/fragment_destaque.xml
@@ -8,7 +8,7 @@
 
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/tvQtd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
@@ -33,7 +33,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView5"
+        app:layout_constraintTop_toBottomOf="@+id/tvQtd"
         app:layout_constraintVertical_bias="0.955">
 
     </FrameLayout>
@@ -52,6 +52,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.025"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView5"
+        app:layout_constraintTop_toBottomOf="@+id/tvQtd"
         app:layout_constraintVertical_bias="1.0" />
 </android.support.constraint.ConstraintLayout>
