--- a/HippoSupermecado/app/src/main/res/layout/fragment_cadastro_usuario.xml
+++ b/HippoSupermecado/app/src/main/res/layout/fragment_cadastro_usuario.xml
@@ -110,12 +110,14 @@
         android:id="@+id/etDD"
         android:layout_width="80dp"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
         android:layout_marginStart="17dp"
         android:layout_marginTop="8dp"
         android:ems="10"
         android:hint="DD"
         android:inputType="date"
         android:maxLength="2"
+        app:layout_constraintEnd_toStartOf="@+id/etMM"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etCelular" />
 
@@ -123,13 +125,13 @@
         android:id="@+id/etMM"
         android:layout_width="80dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginTop="8dp"
         android:ems="10"
         android:hint="MM"
-        android:maxLength="2"
         android:inputType="date"
-        app:layout_constraintStart_toEndOf="@+id/etDD"
+        android:maxLength="2"
+        app:layout_constraintEnd_toStartOf="@+id/etAAAA"
         app:layout_constraintTop_toBottomOf="@+id/etCelular" />
 
     <EditText
@@ -137,15 +139,12 @@
         android:layout_width="175dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="18dp"
-        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:ems="10"
         android:hint="AAAA"
         android:inputType="date"
         android:maxLength="4"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/etMM"
         app:layout_constraintTop_toBottomOf="@+id/etCelular" />
 
     <CheckBox
