--- a/HippoSupermecado/app/src/main/res/layout/item_produto.xml
+++ b/HippoSupermecado/app/src/main/res/layout/item_produto.xml
@@ -19,13 +19,13 @@
     <TextView
         android:id="@+id/txtNome"
         android:layout_width="210dp"
-        android:layout_height="49dp"
+        android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="TextView"
-        android:textAlignment="center"
-        android:textColor="@color/colorAccent"
+        android:text="Nome Do produto"
+        android:textAlignment="viewStart"
+        android:textColor="@color/viewfinder_laser"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -38,78 +38,33 @@
         android:layout_width="wrap_content"
         android:layout_height="16dp"
         android:layout_marginEnd="68dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="Preco desc"
+        android:text="DE:"
+        android:textAlignment="viewStart"
         android:textAllCaps="false"
         android:textSize="14sp"
         android:textStyle=""
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtNome" />
-
-    <TextView
-        android:id="@+id/txtPreco"
-        android:layout_width="112dp"
-        android:layout_height="34dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginTop="8dp"
-        android:text="TextView"
-        android:textColor="@color/colorAccent"
-        android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtDesconto" />
-
-    <TextView
-        android:id="@+id/textView6"
-        android:layout_width="37dp"
-        android:layout_height="36dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginTop="8dp"
-        android:text="R$"
-        android:textAlignment="textEnd"
-        android:textColor="@color/colorAccent"
-        android:textSize="24sp"
-        app:layout_constraintEnd_toStartOf="@+id/txtPreco"
-        app:layout_constraintTop_toBottomOf="@+id/txtDesconto" />
-
-    <TextView
-        android:id="@+id/textView8"
-        android:layout_width="45dp"
-        android:layout_height="36dp"
-        android:layout_marginTop="8dp"
-        android:text="POR:"
-        android:textColor="@color/colorAccent"
-        android:textSize="18sp"
-        app:layout_constraintEnd_toStartOf="@+id/textView6"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
-
-    <TextView
-        android:id="@+id/textView7"
-        android:layout_width="30dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:text="DE:"
-        android:textSize="14sp"
-        app:layout_constraintEnd_toStartOf="@+id/txtDesconto"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.203"
         app:layout_constraintStart_toEndOf="@+id/imageView2"
         app:layout_constraintTop_toBottomOf="@+id/txtNome" />
 
     <TextView
-        android:id="@+id/textView9"
-        android:layout_width="96dp"
-        android:layout_height="33dp"
-        android:layout_marginEnd="8dp"
+        android:id="@+id/txtPreco"
+        android:layout_width="wrap_content"
+        android:layout_height="34dp"
+        android:layout_marginEnd="16dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:text="___"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/txtPreco"
+        android:layout_marginTop="4dp"
+        android:text="R$"
+        android:textAlignment="viewStart"
+        android:textColor="@color/colorAccent"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/textView7"
-        app:layout_constraintTop_toBottomOf="@+id/txtNome"
-        app:layout_constraintVertical_bias="0.888" />
+        app:layout_constraintHorizontal_bias="0.16"
+        app:layout_constraintStart_toEndOf="@+id/imageView2"
+        app:layout_constraintTop_toBottomOf="@+id/txtDesconto" />
 
 
 </android.support.constraint.ConstraintLayout>
