--- a/HippoSupermecado/app/src/main/res/layout/fragment_detalhes2.xml
+++ b/HippoSupermecado/app/src/main/res/layout/fragment_detalhes2.xml
@@ -6,7 +6,20 @@
     android:layout_height="match_parent"
     tools:context="com.hipposupermecado.Detalhes">
 
-    <!-- TODO: Update blank fragment layout -->
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="match_parent"
+        android:layout_height="76dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_weight="1"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tvNomeProduto"
