--- a/HippoSupermecado/app/src/main/res/layout/item_produto.xml
+++ b/HippoSupermecado/app/src/main/res/layout/item_produto.xml
@@ -6,6 +6,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <View
+        android:id="@+id/view"
+        android:layout_width="match_parent"
+        android:layout_height="120dp"
+        android:background="@drawable/back"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="0dp" />
+
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="109dp"
@@ -26,7 +34,7 @@
         android:text="Nome Do produto"
         android:textAlignment="viewStart"
         android:textColor="@color/viewfinder_laser"
-        android:textSize="20sp"
+        android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.463"
@@ -37,33 +45,27 @@
         android:id="@+id/txtDesconto"
         android:layout_width="wrap_content"
         android:layout_height="16dp"
-        android:layout_marginEnd="68dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="130dp"
+        android:layout_marginTop="12dp"
         android:text="DE:"
         android:textAlignment="viewStart"
         android:textAllCaps="false"
         android:textSize="14sp"
         android:textStyle=""
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.203"
-        app:layout_constraintStart_toEndOf="@+id/imageView2"
+        app:layout_constraintStart_toStartOf="@+id/view"
         app:layout_constraintTop_toBottomOf="@+id/txtNome" />
 
     <TextView
         android:id="@+id/txtPreco"
         android:layout_width="wrap_content"
         android:layout_height="34dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginStart="130dp"
+        android:layout_marginTop="8dp"
         android:text="R$"
         android:textAlignment="viewStart"
         android:textColor="@color/colorAccent"
-        android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.16"
-        app:layout_constraintStart_toEndOf="@+id/imageView2"
+        android:textSize="18sp"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtDesconto" />
 
 
