UPD | Layout detalhes do produto

--- a/HippoSupermecado/app/src/main/res/values/colors.xml
+++ b/HippoSupermecado/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#bd0100</color>
     <color name="colorPrimaryDark">#8f0c19</color>
     <color name="colorAccent">#000000</color>
+    <color name="detailBody">#edeaea</color>
 </resources>
