--- a/HippoSupermecado/app/src/main/res/layout/item_produto.xml
+++ b/HippoSupermecado/app/src/main/res/layout/item_produto.xml
@@ -26,7 +26,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
-            android:id="@+id/imageView2"
+            android:id="@+id/imgProduto"
             android:layout_width="129dp"
             android:layout_height="98dp"
             android:layout_marginTop="12dp"
@@ -48,7 +48,7 @@
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.272"
-            app:layout_constraintStart_toEndOf="@+id/imageView2"
+            app:layout_constraintStart_toEndOf="@+id/imgProduto"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
