--- a/HippoSupermecado/app/src/main/res/layout/menu_cabecalho.xml
+++ b/HippoSupermecado/app/src/main/res/layout/menu_cabecalho.xml
@@ -24,7 +24,7 @@
         app:srcCompat="@drawable/hippo2" />
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/tvMenuNome"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
