--- a/HippoSupermecado/app/src/main/res/layout/fragment_endereco.xml
+++ b/HippoSupermecado/app/src/main/res/layout/fragment_endereco.xml
@@ -60,6 +60,7 @@
         android:layout_marginTop="8dp"
         android:ems="10"
         android:hint="CEP"
+        android:inputType="number"
         android:textSize="15sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/etNumero"
